docs/kubernetes/kube001.alexi.ch/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: listomat
  labels:
    app: listomat
