docs/kubernetes/kube001.alexi.ch/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: listomat-service
  namespace: listomat
  labels:
    app: listomat
spec:
  type: ClusterIP
  selector:
    app: listomat
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
